feat: fix some bug and add fitur kelola content
